--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
         <div class="contentLeft">
           <h2>Analogue</h2>
           <div>
-            <div id="clockFace">
-              <div id="secondHand"></div>
-              <div id="minHand"></div>
-              <div id="hrHand"></div>
-              <div id="pin"></div>
-            </div>
+<!-- Analogue clock here -->
           </div>
         </div>
       </div>
