--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
           <h2>Analogue</h2>
           <div>
 <!-- Analogue clock here -->
+          <div id="clockFace">
+            <div id="secondHand"></div>
+            <div id="minHand"></div>
+            <div id="hrHand"></div>
+            <div id="pin"></div>
+          </div>
           </div>
         </div>
       </div>
